symloader caching